src/objects/FC_Charge_Monthly_Revenue_Share__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocated Geography</label>
        <referenceTo>MetroclientGeography__c</referenceTo>
        <relationshipLabel>(FC) Charge Monthly Revenue Shares</relationshipLabel>
        <relationshipName>FC_Charge_Monthly_Revenue_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <label>Allocation %</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Charge_Monthly_Revenue__c</fullName>
        <label>Charge Monthly Revenue</label>
        <referenceTo>FC_Charge_Monthly_Revenue__c</referenceTo>
        <relationshipLabel>(FC) Charge Monthly Revenue Shares</relationshipLabel>
        <relationshipName>FC_Charge_Monthly_Revenue_Shares</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RD_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RD Assignment</label>
        <referenceTo>MetrostudySalesRegionAssignment__c</referenceTo>
        <relationshipLabel>(FC) Charge Monthly Revenue Shares</relationshipLabel>
        <relationshipName>FC_Charge_Monthly_Revenue_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RD__c</fullName>
        <formula>TRIM(RD_Assignment__r.User__r.FirstName &amp; &quot; &quot; &amp; RD_Assignment__r.User__r.LastName)</formula>
        <label>RD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_2__c</fullName>
        <label>Segment 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>(FC) Charge Monthly Revenue Share</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>(FC) Charge Monthly Revenue Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(FC) Charge Monthly Revenue Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>